chore: adjusted openapi and taskController
